[gd_scene load_steps=6 format=2]

[ext_resource path="res://PressStart2P.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Game_over.gd" type="Script" id=2]
[ext_resource path="res://Redo.png" type="Texture" id=3]
[ext_resource path="res://Exit.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[node name="Game_over" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="00" type="Label" parent="."]
anchor_left = 0.525
anchor_top = 0.319
anchor_right = 0.525
anchor_bottom = 0.319
margin_left = -108.0
margin_top = -11.872
margin_right = 108.0
margin_bottom = 12.128
custom_fonts/font = SubResource( 1 )
text = "Game over"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.0
margin_top = 32.0
margin_right = 74.0
margin_bottom = 72.0
custom_constants/separation = 50

[node name="quit" type="Button" parent="HBoxContainer"]
margin_right = 36.0
margin_bottom = 40.0
icon = ExtResource( 4 )
flat = true

[node name="replay" type="Button" parent="HBoxContainer"]
margin_left = 86.0
margin_right = 122.0
margin_bottom = 40.0
icon = ExtResource( 3 )
flat = true
clip_text = true

[connection signal="pressed" from="HBoxContainer/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="HBoxContainer/replay" to="." method="_on_replay_pressed"]
